// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown multi-select Renders multiselect Dropdown correctly 1`] = `
<div
  className="ms-Dropdown-container"
>
  <button
    aria-activedescendant="Dropdown94-option"
    aria-describedby="Dropdown94-option"
    aria-disabled={undefined}
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label={undefined}
    aria-labelledby="Dropdown94-label"
    aria-owns={undefined}
    className="ms-Dropdown"
    data-is-focusable={true}
    id="Dropdown94"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <span
      aria-label={undefined}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder"
      id="Dropdown94-option"
      role="listbox"
    />
    <span
      className="ms-Dropdown-caretDownWrapper"
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="ChevronDown"
        role="presentation"
      >
        
      </i>
    </span>
  </button>
  <span
    className="ms-Layer"
  />
</div>
`;

exports[`Dropdown single-select Renders single-select Dropdown correctly 1`] = `
<div
  className="ms-Dropdown-container"
>
  <button
    aria-activedescendant="Dropdown0-option"
    aria-describedby="Dropdown0-option"
    aria-disabled={undefined}
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label={undefined}
    aria-labelledby="Dropdown0-label"
    aria-owns={undefined}
    className="ms-Dropdown"
    data-is-focusable={true}
    id="Dropdown0"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <span
      aria-label={undefined}
      className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder"
      id="Dropdown0-option"
      role="listbox"
    />
    <span
      className="ms-Dropdown-caretDownWrapper"
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="ChevronDown"
        role="presentation"
      >
        
      </i>
    </span>
  </button>
  <span
    className="ms-Layer"
  />
</div>
`;
